--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - ./.env
     depends_on:
       - database
+      - redis
 
   database:
     image: postgres:latest
@@ -31,6 +32,15 @@ services:
     ports:
       - "25432:5432"
 
+  redis:
+    image: redis:latest
+    container_name: redis
+    restart: always
+    networks:
+      - app-network
+    ports:
+      - "6379:6379"
+
 networks:
     app-network:
-      external: true
+#      external: true
