--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ exceptiongroup==1.2.0
 fastapi==0.109.2
 greenlet==3.0.3
 h11==0.14.0
+hiredis==2.3.2
 httptools==0.6.1
 idna==3.6
 install==1.3.5
@@ -30,6 +31,7 @@ PyJWT==2.8.0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
+redis==5.0.1
 sniffio==1.3.0
 SQLAlchemy==2.0.26
 starlette==0.36.3
